--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <h1>VAMOS A HACER UNA PAGINA WEB</h1>
     <h2 class="subtitulo">Are you Ready?</h2>
-    <hr>
+    <hr>jhgfds
     <p>Bienvenido a mi primera página web!</p>
 
     <img src="img\minions.jpg"width="30%"><iframe id="video_derecha" width="560" height="315" src="https://www.youtube.com/embed/U1YOjHFOq9Q?autoplay=1&mute=1"></iframe>
