--- a/index.html
+++ b/index.html
@@ -12,12 +12,18 @@
 <body>
     <h1>VAMOS A HACER UNA PAGINA WEB</h1>
     <h2 class="subtitulo">Are you Ready?</h2>
-    <hr>jhgfds
+    <hr>
     <p>Bienvenido a mi primera página web!</p>
 
     <img src="img\minions.jpg"width="30%"><iframe id="video_derecha" width="560" height="315" src="https://www.youtube.com/embed/U1YOjHFOq9Q?autoplay=1&mute=1"></iframe>
 
     <a href="https:\\www.google.com">Enlace a google</a>
+    <hr>
+    <div>
+        <button type="button" class="btn btn-primary">Inteligencia Artificial</button>
+        <button type="button" class="btn btn-primary">¡Dona Aquí!</button>
+    </div>
+    
 
     <p>Vamos a crear una lista de navidad:</p>
 
