--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <hr>
     <p>Bienvenido a mi primera página web!</p>
 
-    <img src="img\minions.jpg"width="30%"><iframe id="video_derecha" width="560" height="315" src="https://www.youtube.com/embed/U1YOjHFOq9Q?autoplay=1&mute=1"></iframe>
+    <img src="img\minions.jpg"width="20%"><a href="https:\\www.google.com">Enlace a google</a>
+    <iframe id="video_derecha" width="560" height="315" src="https://www.youtube.com/embed/U1YOjHFOq9Q?autoplay=1&mute=1"></iframe>
 
-    <a href="https:\\www.google.com">Enlace a google</a>
     <hr>
     <div>
         <button type="button" class="btn btn-primary">Inteligencia Artificial</button>
@@ -42,9 +42,9 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-md-6">Hola</div>
-            <div class="col-md-6">Hola</div>
-            <div class="col-md-12">Hola</div>
+            <div class="col-md-4">Hola</div>
+            <div class="col-md-4">Hola</div>
+            <div class="col-md-4">Hola</div>
         </div>
     </div>
 
