--- a/ia.html
+++ b/ia.html
@@ -27,7 +27,7 @@
                     
         </div>
     </div>
-    <hr>    
+    <hr>    fguiuygtfd
     <div><p class="parrafo1">La IA puede aplicarse a múltiples disciplinas. Aquí presentamos 9 usos de la inteligencia artificial en el medio ambiente:</p></div>
 
     <div>
