--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <div id="cuadros" class="col-md"><button type="button" class="btn btn-light"> <a href=consejos.html>Consejos </a></button></div>
                 
             <div id="cuadros" class="col-md"><button type="button" class="btn btn-light">Inteligencia Artificial</button></div>
+            <div id="cuadros" class="col-md"><button type="button" class="btn btn-danger">Vodafone</button></div>
                     
         </div>
     </div>
@@ -74,7 +75,7 @@
         <div>
     </div>
 
-    <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+    <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel" class="carouselinfo">
             <ol class="carousel-indicators">
               <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
               <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
@@ -84,7 +85,7 @@
               <div class="carousel-item active">
                 <img src="img\bosque.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>Rainforest Connection</h5>
+                  <h5><strong>Rainforest Connection</strong></h5>
                   <p>Rainforest Connection utiliza la herramienta TensorFlow de Google para localizar sonidos emitidos por 
                       motosierras y camiones madereros en entornos forestales protegidos.</p>
                 </div>
@@ -92,12 +93,13 @@
             <div class="carousel-item">
                 <img src="img\flores.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5>AI for Earth</h5>
+                    <h5><strong>AI for Earth</strong></h5>
                     <p>AI For Earth es un proyecto de Microsoft que financia iniciativas que utilicen Inteligencia 
                         Artificial para abordar una de estas cuatro áreas vitales para construir un futuro sostenible: el clima, 
                         la biodiversidad, el agua y la agricultura.</p>
                 </div>
-
+            </div>
+    </div>
 
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
